--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,7 @@
+services:
+  - type: web
+    name: ml-career-api
+    runtime: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: python app.py
 
