--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,7 @@ services:
   - type: web
     name: ml-career-api
     env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: python app.py
     plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "python app.py"
-    envVars:
-      - key: PORT
-        value: 10000
+    autoDeploy: true
